Fixed weird scrollbar repositioning

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -5,6 +5,8 @@ html {
   /* sticky footer fix */
   position: relative;
   min-height: 100%;
+  overflow-x: hidden;
+  margin-right: calc(-1 * (100vw - 100%));
 }
 
 body {
